fix bower, usr seeder

--- a/app/assets/stylesheets/base.less
+++ b/app/assets/stylesheets/base.less
@@ -48,7 +48,7 @@
 @import "../../../bower_components/bootstrap/less/utilities.less";
 @import "../../../bower_components/bootstrap/less/responsive-utilities.less";
 
-@import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
+@import "../../../bower_components/fontawesome/css/font-awesome.min.css";
 
 
 
